<resources>
    <string name="app_name">ElorChat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Initial -->
    <string name="reconnecting">Reconectando</string>
    <string name="noWifi">Problemas con al conexion Wifi</string>

    <!-- Login -->
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="login">Conectarse</string>
    <string name="resetPassword">Has olvidado la contraseña?</string>
    <string name="register">Registrarse</string>

    <!-- Register -->
    <string name="name">Nombre</string>
    <string name="surname1">Primer Apellido</string>
    <string name="surname2">Segundo Apellido</string>
    <string name="documentation">DNI</string>
    <string name="address">Direccion</string>
    <string name="telephone1">Telefono 1</string>
    <string name="telephone2">Telefono 2</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="repeatPassword">Repita contraseña</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="back">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>